--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -13,3 +13,27 @@
   height: auto; /* Maintain aspect ratio */
   border-radius: 8px; /* Match the card's border radius */
 }
+
+.button-first-condition {
+  border-radius: 10px;
+  background-color: orange;
+  width: 80px;
+  height: 40px;
+  font-size: 13px;
+  color: white;
+}
+
+.button-first-condition:hover {
+  border-radius: 10px;
+  background-color: lightcoral;
+  width: 80px;
+  height: 40px;
+  font-size: 13px;
+  color: white;
+}
+
+.addbutton {
+  background-color: lightseagreen;
+  border-radius: 10px;
+  width: 20px;
+}
